k8s-ingress/dep-sri-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: srinu-svc
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: srinu
  ports:
    - name: http
      protocol: TCP      # explicitly specify protocol
      port: 80
      targetPort: 80
