k8s-ingress/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cont
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Path rewrites for ALB
    alb.ingress.kubernetes.io/actions.slee: >
      {"Type":"forward","TargetGroupArn":"<TARGET_GROUP_ARN_FOR_SLEE>"}
    alb.ingress.kubernetes.io/actions.srinu: >
      {"Type":"forward","TargetGroupArn":"<TARGET_GROUP_ARN_FOR_SRINU>"}
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: slee-svc
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /slee
            pathType: Prefix
            backend:
              service:
                name: slee-svc
                port:
                  number: 80
          - path: /srinu
            pathType: Prefix
            backend:
              service:
                name: srinu-svc
                port:
                  number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-cont
#   namespace: prod
#   annotations: 
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   defaultBackend:
#     service:
#       name: slee-svc
#       port:
#         number: 80
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: srinu-svc
#                 port:
#                   number: 80
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: slee-svc
#                 port:
#                   number: 80

# # ---
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   name: ingress-cont
# #   namespace: prod
# #   annotations:
# #     kubernetes.io/ingress.class: alb
# #     alb.ingress.kubernetes.io/scheme: internet-facing
# #     alb.ingress.kubernetes.io/target-type: ip
# # spec:
# #   ingressClassName: alb
# #   rules:
# #     - host: www.yourfeatureworld.com
# #       http:
# #         paths:
# #           - path: /srinu
# #             pathType: Prefix
# #             backend:
# #               service:
# #                 name: srinu-svc
# #                 port:
# #                   number: 80
# #           - path: /slee
# #             pathType: Prefix
# #             backend:
# #               service:
# #                 name: slee-svc
# #                 port:
# #                   number: 80
